# discord-channel-to-html

./: .gitignore  CLAUDE.md  Cargo.toml  build.sh
.github/workflows/: build-release.yml
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/channels/: page.tsx
frontend/src/components/: chat-header.tsx  message-item.tsx  message-list.tsx
src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  monitor.rs  scraper.rs  server.rs  server_store.rs
src/agent_browser/: client.rs
