[package]
name = "discord-channel-to-html"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "=0.8.8", features = ["macros"] }
clap = { version = "=4.5.60", features = ["derive"] }
dirs = "=5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = ["macros", "rt-multi-thread", "signal", "process", "fs", "io-util", "net", "time"] }
include_dir = "=0.7.4"
toml = "=0.8.23"
rusqlite = { version = "=0.31.0", features = ["bundled"] }
sha2 = "=0.10.8"
chrono = { version = "=0.4.40", features = ["serde"] }
tower-http = { version = "=0.6.6", features = ["cors"] }
tracing = "=0.1.41"
tracing-subscriber = "=0.3.19"
open = "5.0"
